--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,21 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]
-dependencies = []
+dependencies = ["mne>=1.0.0", 
+                "numpy>=1.20.0", 
+                "python-dotenv>=0.19.0", 
+                "scipy>=1.7.0", 
+                "matplotlib>=3.5.0", 
+                "scikit-learn>=1.0.0", 
+                "pytest>=6.0.0", 
+                "pytest-cov>=3.0.0", 
+                "pre-commit>=2.15.0", 
+                "ruff>=0.1.0"]
+
 
 [tool.setuptools]
 package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
