--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ python-dotenv>=0.19.0
 # Scientific computing and visualization
 scipy>=1.7.0
 matplotlib>=3.5.0
+PyWavelets>=1.4.1 
+cython>=3.1.6
 
 # Optional: Machine learning (if used in models)
 scikit-learn>=1.0.0
